src/styles.css
/* ... */
.project-editor__form {
  display: flex;
  gap: var(--space-xs);
}

.project-editor__edit-color-btn {
  display: flex;
  gap: var(--space-xs);
  padding: var(--space-sm);
}

.project-editor__name-input {
  font-size: inherit;
  width: 100%;
  padding: var(--space-xs) var(--space-sm);
  outline: none;
  color: var(--clr-fg);
  border: 1px solid var(--clr-surface-30);
  background-color: var(--clr-surface-10);
  border-radius: var(--border-radius-sm);
}

.project-editor__name-input:focus {
  border: 1px solid var(--clr-surface-50);
}

.project-editor__color-popover {
  position: absolute;
  top: 100%;
  left: 10%;
  display: grid;
  grid-template-columns: repeat(5, auto);
  gap: var(--space-sm);
  width: fit-content;
  padding: var(--space-sm);
  border-radius: var(--border-radius-sm);
  background-color: var(--clr-surface-30);
}

.project-editor__color-popover.above {
  top: auto;
  bottom: 100%;
}

.project-editor__color-swatch-btn {
  width: var(--icon-md);
  height: var(--icon-md);
  border: none;
  border-radius: 50%;
  background: var(--color);
  cursor: pointer;
}

.project__link {
  display: flex;
  align-items: center;
  gap: var(--space-xs);
  min-width: 0;
}

.project__name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.project-menu,
.task-menu {
  top: anchor(top);
  left: anchor(right);
  margin: 0 0 0 var(--space-sm);
  z-index: 100;
  background-color: var(--clr-surface-10);
  border: 2px solid var(--clr-surface-20);
}

.project-menu__delete-btn,
.task-menu__delete-btn {
  display: flex;
  align-items: center;
  gap: var(--space-xs);
  cursor: pointer;
  padding: var(--space-xs);
  color: var(--clr-warning);
  background-color: transparent;
  border: none;
}

.project-menu__delete-btn-icon,
.task-menu__delete-btn-icon {
  fill: var(--clr-warning);
}

.sidebar__theme-toggle-btn {
  width: fit-content;
  padding: var(--space-xs);
}

.toggle-sidebar-btn {
  position: absolute;
  top: 1.2rem;
  left: calc(var(--sidebar-width) - 4rem);
  padding: var(--space-xs) var(--space-xxs);
  align-self: flex-start;
}

.toggle-sidebar-btn.toggled {
  transition: left 0.2s ease;
}

.toggle-sidebar-btn.collapsed {
  left: 1.5rem;
}

main {
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: var(--clr-surface-0);
  transition: background-color 0.4s ease;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--space-md);
  margin: var(--space-xl) var(--space-lg);
  overflow-y: auto;
}

.content__heading {
  width: 100%;
  max-width: 50rem;
}

.content__task-list {
  width: 100%;
  max-width: 50rem;
}

.task { 
  list-style-type: none;
  transition: opacity 0.3s ease, transform 0.3s ease;
}

.task.completing {
  opacity: 0;
  transform: translateX(10px);
}

.task__container { display: flex; }

.task__link {
  width: 100%;
  display: grid;
  grid-template: repeat(4, auto) / 1.3rem auto;
  grid-template-areas:
    "bubble title"
    "bubble description"
    "bubble due-date"
    "separator separator";
  row-gap: var(--space-xs);
  column-gap: var(--space-sm);
  cursor: pointer;
  user-select: none;
}

.task__bubble {
  appearance: none;
  -webkit-appearance: none;
  width: 1.3rem;
  height: 1.3rem;
  border-radius: 50%;
  border: 2px solid #808080;
  background: var(--clr-surface-0);
  cursor: pointer;
  transition: background 0.4s;
  display: grid;
  grid-area: bubble;
  place-content: center;
}

.task__bubble--high { border-color: #d1453b; }
.task__bubble--medium { border-color: #eb8909; }
.task__bubble--low { border-color: #246fe0; }

.task__bubble::after {
  content: "";
  width: 5px;
  height: 9px;
  border: 2px solid var(--clr-fg);
  border-top: none;
  border-left: none;
  transform: rotate(45deg) translateY(-1px);
  opacity: 0;
  transition: opacity 0.1s, border 0.4s ease;
}

.task__bubble:checked::after { opacity: 1; }

.task__title { 
  grid-area: title;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.task__title--completed { text-decoration: line-through; }

.task__description {
  grid-area: description;
  font-size: var(--font-size-sm);
  color: var(--clr-fg-gray);
  transition: color 0.4s ease;
}

.task__due-date-row {
  grid-area: due-date;
  display: flex;
  gap: var(--space-xs);
  color: var(--clr-fg-gray);
  fill: var(--clr-fg-gray);
  transition: color 0.4s ease, fill 0.4s ease;
}

.task__due-date-row--today {
  color: var(--clr-fg-green);
  fill: var(--clr-fg-green);
}

.task__due-date-row--tomorrow {
  color: var(--clr-fg-orange);
  fill: var(--clr-fg-orange);
}

.task__due-date-row--weekday {
  color: var(--clr-fg-purple);
  fill: var(--clr-fg-purple);
}

.task__due-date-row--overdue {
  color: var(--clr-warning);
  fill: var(--clr-warning);
}

.separator--task { grid-area: separator; }

